syntax = "proto3";

option csharp_namespace = "Cinema.gRPC.Api";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package showtime;


service Showtime {
    
    rpc GetById (IdRequest) returns (ShowtimeResponse);
    
    rpc Search (SearchRequest) returns (ShowtimeListResponse);
    
    rpc GetAll (google.protobuf.Empty) returns (ShowtimeListResponse);
    
    rpc CreateShowtime(CreateShowtimeRequest) returns (CreateShowtimeResponse);
}


message IdRequest {
    int32 id = 1;
}


message SearchRequest {
    string text = 1;
}

message ShowtimeListResponse {
    repeated ShowtimeResponse showtimes = 1;
}


message ShowtimeResponse {
    int32 id = 1;
    string session_date = 2;
    string movie_title = 3;
}

message CreateShowtimeRequest {
    int32 auditorium_id = 1;
    int32 movie_id = 2;
    google.protobuf.Timestamp session_date = 3;
}

message CreateShowtimeResponse {
    int32 id = 1;
    string session_date = 2;
    string movie_title = 3;
}
